--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -9,7 +9,7 @@
     <title>Stock Graph Prototype Design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/libraries/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../libraries/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
