Added a lot more mobile fixes for the stock example

--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -39,7 +39,7 @@
                         MARKET VALUE
                     </h6>
                     <h4>
-                        $31,958
+                        $122,500
                     </h4>
                 </div>
                 <div class="col-3 col-lg-3 hidden-md-down blueHeaderBorder text-center">
@@ -47,7 +47,7 @@
                         EXPENDITURE
                     </h6>
                     <h4>
-                        $19,958
+                        $71,500
                     </h4>
                 </div>
                 <div class="col-3 col-lg-2 hidden-md-down blueHeaderBorder text-center">
@@ -55,7 +55,7 @@
                         QUANTITY
                     </h6>
                     <h4>
-                        451
+                        350
                     </h4>
                 </div>
                 <div class="col-12 col-md-7 col-lg-4">
@@ -64,7 +64,7 @@
                             <img class="img-fluid borderRadius pull-right"
                                  src="http://ryan-musselwhite.com/reus/themes/purple/images/team/profile3.jpg">
                         </div>
-                        <div class="col-7 col-sm-8 col-md-7 col-lg-8 noPadding">
+                        <div class="col-7 col-sm-8 col-md-7 col-lg-7 noPadding">
                             <p class="paddingtop15">
                                 Hi, Jess
                                 <i class="fa fa-chevron-down resetFont paddingLeft10"></i>
@@ -75,15 +75,15 @@
             </div>
         </div>
     </div>
-    <div class="row" style="overflow:hidden;">
+    <div class="row darkBlueBackground" style="overflow:hidden;">
+        <div class="text-center col-12 chartText">
+            <h5 class="mutedHeader">TODAY'S MARKET VALUE</h5>
+            <h2 class="whiteText marginTop15">
+                $122,500
+                <span class="smallerFont goodStatus"><i class="fa fa-angle-up"></i> 58.36%</span>
+            </h2>
+        </div>
         <div class="chartPlaceholder">
-            <div class="text-center">
-                <h5 class="mutedHeader">TODAY'S MARKET VALUE</h5>
-                <h2 class="whiteText marginTop15">
-                    $31,958
-                    <span class="smallerFont goodStatus"><i class="fa fa-angle-up"></i> 31%</span>
-                </h2>
-            </div>
             <canvas id="chart" width="400" height="78"></canvas>
         </div>
     </div>
@@ -93,12 +93,11 @@
         </div>
         <div class="marginTop10 col-12 col-sm-9 col-md-8 noPadding">
             <div class="row">
-                <div class="col-12 col-sm-6 col-md-7 col-lg-8 noPadding">
+                <div class="col-4 col-sm-6 col-md-7 col-lg-8 noPadding">
                     <i class="fa fa-upload lightGreyBorder circleBorder pull-right"></i>
                     <i class="fa fa-plus lightGreyBorder circleBorder pull-right"></i>
                 </div>
-                <div class="col-12 col-sm-5 col-md-5 col-lg-4">
-                    <div class="marginTop15 hidden-sm-up"></div>
+                <div class="col-8 col-sm-5 col-md-5 col-lg-4">
                     <div class="searchBox">
                         <i class="fa fa-search absolute"></i>
                         <input type="text" placeholder="Search..."/>
@@ -162,6 +161,58 @@
                 </td>
                 <td class="goodStatus">
                     +156.48%
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Apple
+                </td>
+                <td class="hidden-md-down">
+                    APPL
+                </td>
+                <td>
+                    NASDAQ
+                </td>
+                <td class="hidden-md-down">
+                    Technology
+                </td>
+                <td class="hidden-md-down">
+                    200
+                </td>
+                <td class="hidden-md-down">
+                    $14,000
+                </td>
+                <td>
+                    $34,500
+                </td>
+                <td class="goodStatus">
+                    +40.56%
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    PayPal
+                </td>
+                <td class="hidden-md-down">
+                    PYPL
+                </td>
+                <td>
+                    NASDAQ
+                </td>
+                <td class="hidden-md-down">
+                    Technology
+                </td>
+                <td class="hidden-md-down">
+                    50
+                </td>
+                <td class="hidden-md-down">
+                    $4,000
+                </td>
+                <td>
+                    $3,500
+                </td>
+                <td class="badStatus">
+                    -12.5%
                 </td>
             </tr>
             </tbody>
