Added a lot more mobile fixes for the stock example

--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class="container-fluid" style="z-index:2;">
+<div class="container-fluid">
     <div class="header row">
         <div class="col-2 col-md-1">
             <i class="fa fa-line-chart blueText pull-right" aria-hidden="true"></i>
@@ -219,8 +219,6 @@
         </table>
     </div>
 </div>
-<img style=" position: absolute;left: 0;top: 0;width: 100%;height: auto;opacity: 0;"
-     src="https://static1.squarespace.com/static/52934df9e4b0de25af331f19/t/55106acbe4b010138765e78e/1427139280751/?format=2500w">
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script type="text/javascript">
