--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A stock graph prototype design">
     <meta name="robots" content="index,follow,noodp">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ryan.musselwhite">
+    <meta name="twitter:title" content="A stock graph prototype design">
+    <meta name="twitter:description" content="A prototype design relating to a stock portfolio">
+    <meta name="twitter:image" content="http://ryan-musselwhite.com/prototype-designs/stock-graph/twitter.png">
+
     <title>Stock Graph Prototype Design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="../libraries/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="favicon-line-chart.ico" />
 </head>
 <body>
 <div class="container-fluid">
