--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../libraries/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="favicon-line-chart.ico" />
+    <link rel="icon" href="favicon-line-chart.ico"/>
 </head>
 <body>
 <div class="container-fluid">
@@ -31,12 +31,19 @@
                 <div class="col-2 hidden-md-down col-md-2">
                     <i class="fa fa-file-text-o blueBorder circleBorder pull-right" aria-hidden="true"></i>
                 </div>
-                <div class="col-11 col-md-8">
+                <div class="col-11 col-md-8 pointer" id="stocks">
                     <h4 class="unBold paddingtop10">
-                        Stocks
+                        All Stocks
                         <i class="fa fa-chevron-down pull-right resetFont paddingtop10"></i>
                     </h4>
                 </div>
+            </div>
+            <div id="dropdownStocks" class="dropdown marginTop10">
+                <ul>
+                    <li><a href="#">All Stocks</a></li>
+                    <li><a href="#">FTSE 100</a></li>
+                    <li><a href="#">NASDAQ</a></li>
+                </ul>
             </div>
         </div>
         <div class="col-5 col-md-6">
@@ -66,7 +73,7 @@
                     </h4>
                 </div>
                 <div class="col-12 col-md-7 col-lg-4">
-                    <div class="row pointer">
+                    <div class="row pointer" id="profile">
                         <div class="col-5 col-sm-4 col-md-5 col-lg-4">
                             <img class="img-fluid borderRadius pull-right"
                                  src="http://ryan-musselwhite.com/reus/themes/purple/images/team/profile3.jpg">
@@ -77,6 +84,14 @@
                                 <i class="fa fa-chevron-down resetFont paddingLeft10"></i>
                             </p>
                         </div>
+                    </div>
+                    <div id="dropdownProfile" class="dropdown">
+                        <ul>
+                            <li><a href="#">My Profile</a></li>
+                            <li><a href="#">Account Settings</a></li>
+                            <li><a href="#">Help</a></li>
+                            <li><a href="#">Logout</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -290,6 +305,24 @@
                     ]
                 }
             }
+        }
+    );
+
+    document.getElementById('profile').addEventListener(
+        'click', function ()
+        {
+            document.getElementById('dropdownProfile').style.display =
+                (document.getElementById('dropdownProfile').style.display === 'block') ? 'none' : 'block';
+            document.getElementById('dropdownStocks').style.display = 'none';
+        }
+    );
+
+    document.getElementById('stocks').addEventListener(
+        'click', function ()
+        {
+            document.getElementById('dropdownStocks').style.display =
+                (document.getElementById('dropdownStocks').style.display === 'block') ? 'none' : 'block';
+            document.getElementById('dropdownProfile').style.display = 'none';
         }
     );
 
