Added some dropdown menus

--- a/stock-graph/index.html
+++ b/stock-graph/index.html
@@ -251,7 +251,7 @@
         labels: ["JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEPT", "OCT", "NOV", "DEC", "JAN", "FEB"],
         datasets: [
             {
-                label: "Stock",
+                label: "Value",
                 fill: true,
                 lineTension: 0.4,
                 backgroundColor: "rgba(23,61,74,0.5)",
