Added more to the message dashboard prototype

--- a/message-dashboard/index.html
+++ b/message-dashboard/index.html
@@ -32,7 +32,7 @@
                     <a href="#"><i class="fa fa-circle-o"></i> Dashboard</a>
                 </li>
                 <li class="active">
-                    <a href="#"><i class="fa fa-envelope-o"></i> Inbox</a>
+                    <a href="#"><i class="fa fa-envelope-o"></i> Inbox <span class="notification pull-right">2</span></a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-user-o"></i> Find People</a>
@@ -45,6 +45,50 @@
                 </li>
             </ul>
         </div>
+        <div class="col-sm-8 col-md-8 col-lg-10 marginTop15">
+            <div class="row shadowBottom">
+                <div class="col-6 col-sm-6">
+                    <div class="searchBox">
+                        <i class="fa fa-search"></i>
+                        <input class="search" placeholder="Search"/>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6">
+                    <div class="pull-right">
+                        <div class="topNotification pull-left">
+                            <div class="smallNotification">3</div>
+                            <i class="fa fa-bell"></i>
+                        </div>
+                        <div class="topNotification  pull-left">
+                            <div class="smallNotification">3</div>
+                            <i class="fa fa-comment"></i>
+                        </div>
+                        <img src="lady1.jpg" class="avatarImage pointer"/>
+                        <span class="hidden-md-down username pointer">Maddie Parker</span>
+                        <i class="fa fa-chevron-down pointer"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="row shadowBottom marginTop25">
+                <div class="col-6 col-sm-6">
+                    <h5>All Messages <span class="textAccent pointer">(100)</span>
+                        <i class="fa fa-chevron-down textAccent pointer"></i></h5>
+                </div>
+                <div class="col-6 col-sm-6">
+                    <button class="btn btnPurple pull-right pointer">
+                        New Message <i class="fa fa-envelope"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    messages
+                </div>
+                <div class="col-sm-6">
+                    onemessage
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -52,7 +96,7 @@
     /*document.getElementById('').addEventListener(
         'click', function ()
         {
-            
+
         }
     );*/
 </script>
