added the start of the message area on the right

--- a/message-dashboard/index.html
+++ b/message-dashboard/index.html
@@ -145,8 +145,7 @@
                                     Cody Benson
                                 </p>
                                 <div>
-                                    <div class="circleIndicator greenBorder pull-left">
-                                    </div>
+                                    <div class="circleIndicator greenBorder pull-left"></div>
                                     <span class="metadata">Replied</span>
                                 </div>
                             </div>
@@ -220,7 +219,41 @@
                     </div>
                 </div>
                 <div class="col-sm-6 singleMessage backgroundLightGrey">
-                    onemessage
+                    <div class="row paddingTop25 backgroundWhite shadowBottom zIndex2">
+                        <div class="col-6">
+                            <h5>Lorem ipsum dolor sit amet</h5>
+                            <p class="metaFrom">From: <strong>Cody Benson</strong></p>
+                        </div>
+                        <div class="col-6">
+                            <div class="selectStatus">
+                                <div class="circleIndicator greenBorder pull-left status"></div>
+                                <select>
+                                    <option>
+                                        Replied
+                                    </option>
+                                    <option>
+                                        Not Replied
+                                    </option>
+                                    <option>
+                                        Contacted
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="message pull-right">
+                                <img class="avatarImage pull-right" src="lady1.jpg"/>
+                                <span class="bubble bubblePurple pull-right">
+                                    Hi Cody nice to meet you!
+                                    <span class="time">
+                                        11:43 AM
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
